Fix T91894: Cycles baking normal maps of transformed objects not working